# hashcode2018

./: .gitignore  default.nix  hashcode2018.cabal  stack.yaml
src/: Main.hs
