name:                hashcode2018
version:             0.1.0.0
license:             PublicDomain
author:              Rupert Horlick
maintainer:          ruperthorlick@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hashcode2018
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
